content for cater page

--- a/src/app/components/cater/cater.component.html
+++ b/src/app/components/cater/cater.component.html
@@ -35,21 +35,27 @@
             </div>
             <div class="row">
                   <div class="col-md-5">
-                        <h2>How Digital Transformation</h2>
-                        <h2>Is Important to business</h2>
-                        <p>We believe ressearch brings our team of design experts connect with your business
-                              and 'dev team to build a better product We believe ressearch brings our team of 
-                              design experts connect with your business and 'dev team to build a better product</p>
+                        <h2>HOW DIGITAL TRANSFORMATION</h2>
+                        <h2>IS IMPORTANT TO BUSINESS?</h2>
+                        <p>A digital transformation strategy can immensely help transform the business, streamline process 
+                              with the use of latest technologies to enhance customer experience and delivery better 
+                              productivity. The concern for many businesses can be, Are we too late to begin now? 
+                              It’s never too late to begin, is better to start now than never. In fact, digital speed is as 
+                              much as 5 times faster than a traditional business, and that pace is essential to becoming a 
+                              pioneer in the business domain. Those companies at the forefront of the digital revolution earn 
+                              much more authority, trust and respect from customers.</p>
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
-                        <h2>Advantages Of Digital</h2>
-                        <h2>Transformation</h2>
+                        <h2>ADVANTAGES OF DIGITAL</h2>
+                        <h2>TRANSFORMATION</h2>
                         <ul class="list">
-                              <li><p>We believe ressearch brings our team of design</p></li>
-                              <li><p>We believe ressearch brings our team of design</p></li>
-                              <li><p>We believe ressearch brings our team of design</p></li>
-                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>Achieve customer adoption of digital customer journeys</p></li>
+                              <li><p>Design and digitise customer journeys</p></li>
+                              <li><p>Faster delivery</p></li>
+                              <li><p>Deeper Customer Insights</p></li>
+                              <li><p>Better Customer Experience</p></li>
+                              <li><p>Opening the Door to Globalization</p></li>
                         </ul>
                   </div>
             </div>
@@ -63,11 +69,15 @@
                   <div class="col-md-5">
                         <h2>DIGITAL TRANSFORMATION</h2>
                         <h2>SERVICES</h2>
-                        <p>We believe ressearch brings our team of design experts connect with your business
-                              and 'dev team to build a better product We believe ressearch brings our team of 
-                              design experts connect with your business and 'dev team to build a better product
+                        <p>Accelerate the shift to digital with our design driven strategy with clarity and sprint based 
+                              approach. Our structured approach helps clients accelerate their digital adoption rate at the 
+                              same pace they see business change happening all around them. We priorities initiatives that 
+                              deliver value with the highest ROI.
                         </p>
-                        <div class="btn">View Casestudy</div>
+                        <p>Our consultants can build well-crafted digital experience for the end users thereby increasing 
+                        the customer footfall and retention. 
+                        </p>
+                        <div class="btn">View Case Study</div>
                   </div>
             </div>
       </div>
@@ -83,18 +93,24 @@
             <div class="row">
                   <div class="col-md-5">
                         <h2>PRODUCT DEVELOPMENT STRATEGY</h2>
-                        <p>We believe ressearch brings our team of design experts connect with your business
-                              and 'dev team to build a better product We believe ressearch brings our team of 
-                              design experts connect with your business and 'dev team to build a better product
+                        <p>The key for a Product Development is understand the market, deep Research brings key Insights for 
+                              product development. Urban & Hauser outline a range of new product development strategies 
+                              companies should consider. They are classified as Reactive or Proactive, depending on how a 
+                              company handles pressures from the market and how it decides to use external and internal sources 
+                              of product development.
                         </p>
                         <h2>PRODUCT DEVELOPMENT PROCESS</h2>
                         <ul class="list">
-                              <li><p>We believe ressearch brings our team of design</p></li>
-                              <li><p>We believe ressearch brings our team of design</p></li>
-                              <li><p>We believe ressearch brings our team of design</p></li>
-                              <li><p>We believe ressearch brings our team of design</p></li>
+                              <li><p>Selecting the Target Group</p></li>
+                              <li><p>Conducting Market Research</p></li>
+                              <li><p>Data Synthesis</p></li>
+                              <li><p>Ideation & Conceptualisation</p></li>
+                              <li><p>Wireframes</p></li>
+                              <li><p>Interaction Design</p></li>
+                              <li><p>Usability Testing</p></li>
+                              <li><p>Design Refinement</p></li>
                         </ul>
-                        <div class="btn">View Casestudy</div>
+                        <div class="btn">View Case Study</div>
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
@@ -115,27 +131,52 @@
             </div>
             <div class="row">
                   <div class="col-md-5">
-                        <h2>ESTABLISH BRAND</h2>
-                        <p>We believe ressearch brings our team of design experts connect with your business
-                              and 'dev team to build a better product We believe ressearch brings our team of 
-                              design experts connect with your business and 'dev team to build a better product</p>
+                        <h2>DESIGNING THE MVP</h2>
+                        <p>The process starts with understanding the mission and the bigger vision and set the pitch. The 
+                              requirement gathering happens in a series of iteration for better refinement and alignment of 
+                              goals and realistic road map.
+                        </p>
+                        <ul class="list">
+                              <li><p>Understanding the Goals</p></li>
+                              <li><p>Ideation</p></li>
+                              <li><p>Solution Divergence (thinking out of the box)</p></li>
+                              <li><p>Solution Convergence (adding constraints and bringing to reality)</p></li>                                    <li><p>Setting the Road map</p></li>
+                        </ul>
+                        
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
                         <h2>SETUP BUSINESS STRATEGY</h2>
-                        <p>We believe ressearch brings our team of design experts connect with your business
-                              and 'dev team to build a better product We believe ressearch brings our team of 
-                              design experts connect with your business and 'dev team to build a better product</p>
+                        <p>With the overall road map defined we convert the drawing board ideas to realistic Business Strategy and collaborate with the 
+                              Product Owners to priorities and assign timeline. Analyse the ROI and align the features for the road map ahead.
+                        </p>
                   </div>
             </div>
             <div class="row">
                   <div class="col-md-5">
-                        <h2>KNOW THE RIGHT PATH</h2>
-                        <p>We believe ressearch brings our team of design experts connect with your business
-                              and 'dev team to build a better product We believe ressearch brings our team of 
-                              design experts connect with your business and 'dev team to build a better product
+                        <h2>DESIGN SPRINTS</h2>
+                        <p>Design Sprints have been used by product leaders in companies like Uber, Slack, Google and Twitter 
+                              to solve problems and build better products. It is an ultimate tool for 
                         </p>
-                        <div class="btn">View Casestudy</div>
+                        <ul class="list">
+                              <li><p>developing a hypothesis</p></li>
+                              <li><p>prototyping an idea</p></li>
+                              <li><p>rapid testing</p></li>
+                        </ul>
+                        <p>with as little investment as possible in a the actual market.</p>
+
+                        <p>Design Sprints brings together cross-functional team to explore ideas from 360 degree with the 
+                              core idea of “Faster to market”. We make sure the MVP hits the market with the best of experience 
+                              and iterate based on real customer feedback. The successive sprints are planned help in increasing 
+                              the customer base and also in retaining existing customer.
+                        </p>
+                        <ul class="list">
+                              <li><p>Colloborate</p></li>
+                              <li><p>Innovate</p></li> 
+                              <li><p>Accelerate</p></li>
+                        </ul>
+                        
+                        <div class="btn">View Case Study</div>
                   </div>
                   <div class="col-md-1"></div>
                   <div class="col-md-5">
